2008-11-03  Gabor Toeroek <tgabor84@gmail.com>

	* include/var_io.h: Added defines for AT91SAM7SE.

2008-10-19  Igor B. Poretsky <poretsky@mlbox.ru>

	* include/var_io.h Fixed various typos.

2008-09-02  John Eigelaar: <jeigelaar@mweb.co.za>
 
 	* include/var_io.h: Added support for a second flash controller.
	Fixed some cut and paste gremlins in the SSC definitions.
	Changed decimal definitions in TWI that could have been confused with 
	octal definitions.
	Added ADC definitions for the TRGEN bit and the PDC control bits.
	   

2008-07-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/hal_diag_dcc.{ch}
	* src/hal_diag.c
	* src/hal_diag_dbg.c
	* cdl/hal_arm_at91.cdl: Add support for DCC, ie the Debug
	Communications Channel, which is part of JTAG core of AT91 and
	most ARM processors. JTAG devices often make this available via a
	TCP port which can be accessed via telnet. NOTE: Only output to
	DCC has been tested via diag_printf. Code exists for input, but it
	has not been tested.
	
2007-03-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* include/var_io.h: Fix a few typos pointed out by
	Igor B. Poretsky.
	
2007-02-13  John Eigelaar <jeigelaar@mweb.co.za>
 
 	* include/var_io.h: Fixed up the EMAC definitions to work
 	with the brand new EMAC driver  

2007-02-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h: Added PWM registers.

2007-01-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h (AT91_PITC_VALUE_MASK): New - mask to access
	the PITC value which is a 20 bit number.
	* src/timer_pit.c: Change all hard coded mask for the period, 
	some of which were wrong, to use AT91_PITC_VALUE_MASK. 
	When initializing the PIT, remember to decrement the period first.
	Bugs found by Jim Seymour.

2006-09-08  John Eigelaar <jeigelaar@mweb.co.za>

	* include/var_io.h: Added definition for SPI MODFDIS bit 

2006-08-31  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/at91_misc.c: Now also resets external circuitry via
	AT91_WD_OMR_EXTEN
	